# opus

./: .gitignore  ChangeLog.md  LICENSE  README.md  opus.cabal  stack.yaml
.github/workflows/: test.yaml
src/Codec/Audio/Opus/: Decoder.hs  Encoder.hs  Types.hs
src/Codec/Audio/Opus/Decoder/: Conduit.hs
src/Codec/Audio/Opus/Encoder/: Conduit.hs
src/Codec/Audio/Opus/Internal/: Opus.hsc
test/: OpusCompare.hs  Spec.hs  opus_compare_wrapper.c
