name:                opus
version:             0.2.0.0
synopsis:            opus audio codec
description:         haskell ffi binding to reference implementation of opus audio codec
homepage:            https://github.com/alios/opus#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Barenhoff
maintainer:          mbarenh@alios.org
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    README.md
    ChangeLog.md


library
  hs-source-dirs:      src
  exposed-modules:     Codec.Audio.Opus.Encoder,
                       Codec.Audio.Opus.Encoder.Conduit,
                       Codec.Audio.Opus.Decoder,
                       Codec.Audio.Opus.Decoder.Conduit,
                       Codec.Audio.Opus.Types,
                       Codec.Audio.Opus.Internal.Opus
  default-language:    Haskell2010
  build-tools:         hsc2hs
  includes:
      opus/opus.h
      opus/opus_types.h
      opus/opus_defines.h
  extra-libraries:   opus
  if !os(windows)
    pkgconfig-depends: opus
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5,
                       exceptions,
                       resourcet,
                       bytestring,
                       conduit,
                       microlens,
                       microlens-th,
                       hspec

source-repository head
  type:     git
  location: https://github.com/alios/opus

test-suite hs-mumble-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language:    Haskell2010
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       opus,
                       bytestring,
                       hspec,
                       microlens,
                       process
