cabal-version:       3.0
name:                opus
version:             0.3.0.0
synopsis:            Bindings to libopus for the Opus audio codec
description:
    Provides Haskell FFI bindings to libopus, the reference implementation of
    the Opus Codec (RFC 6716 and RFC 8251). The Opus codec is designed for
    interactive speech and audio transmission over the Internet, but is also
    intended for storage and streaming.

    The library provides an interface to the encoder and decoder, as well as a
    Conduit wrapper for operating with stream data.

    To use this library, you need to have the libopus library installed on your
    system. Please see the README for more info.

    The compiled Haskell code will link dynamically by default, so if
    you are distributing a precompiled binary, you may want to look into
    static linking.

    This package is a fork of the original opus package by Markus Barenhoff,
    which is no longer maintained (and was never published to Hackage).
    Permission has been granted by the original author to publish this fork
    with the same name under the BSD3 license.
homepage:            https://github.com/yutotakano/opus
license:             BSD-3-Clause
license-file:        LICENSE
author:              Markus Barenhoff <mbarenh@alios.org>
maintainer:          Yuto Takano <moa17stock@gmail.com>
copyright:           Markus Barenhoff <mbarenh@alios.org>, Yuto Takano <moa17stock@gmail.com>, Haskell Opus Library Contributors
category:            Codec
build-type:          Simple
tested-with:         GHC ==9.4.8
extra-doc-files:
    README.md
    ChangeLog.md
    LICENSE
extra-source-files:
    test/opus_compare_wrapper.c
    test/opus_compare.c

source-repository head
  type:     git
  location: https://github.com/yutotakano/opus

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Audio.Opus.Encoder,
                       Codec.Audio.Opus.Encoder.Conduit,
                       Codec.Audio.Opus.Decoder,
                       Codec.Audio.Opus.Decoder.Conduit,
                       Codec.Audio.Opus.Types,
                       Codec.Audio.Opus.Internal.Opus
  default-language:    Haskell2010
  build-tool-depends:  hsc2hs:hsc2hs
  pkgconfig-depends:   opus
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5,
                       exceptions >= 0.10.0 && < 0.11,
                       resourcet >= 1.2.1 && < 1.4,
                       bytestring >= 0.11.0.0 && < 0.13,
                       conduit >= 1.3 && < 1.4,
                       microlens >= 0.4.11.2 && < 0.5,
                       microlens-th >= 0.4.3.11 && < 0.5,

test-suite opus-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language:    Haskell2010
  hs-source-dirs:
      test
  other-modules:       OpusCompare
  c-sources:           test/opus_compare_wrapper.c
  include-dirs:        test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       opus,
                       bytestring,
                       hspec,
                       microlens,
                       directory
